--- a/AirBoard/AirBoard/Base.lproj/Main.storyboard
+++ b/AirBoard/AirBoard/Base.lproj/Main.storyboard
@@ -284,7 +284,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Arrival City" textAlignment="right" lineBreakMode="headTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Np-tV-1y7">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Arrival City" textAlignment="right" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Np-tV-1y7">
                                         <rect key="frame" x="212" y="311.5" width="155" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -468,9 +468,13 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="30" placeholderIntrinsicHeight="30" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3WX-oZ-Dyw">
-                                        <rect key="frame" x="304" y="44" width="33" height="30"/>
+                                        <rect key="frame" x="319" y="16" width="40" height="40"/>
                                         <color key="backgroundColor" name="controlAccentColor" catalog="System" colorSpace="catalog"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="Ft2-kN-x5G"/>
+                                            <constraint firstAttribute="height" constant="40" id="PQt-FQ-GGx"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <state key="normal" title="+">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
@@ -479,9 +483,9 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="30" placeholderIntrinsicHeight="30" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="amf-Q8-zYX">
-                                        <rect key="frame" x="304" y="78" width="33" height="30"/>
+                                        <rect key="frame" x="319" y="68" width="40" height="40"/>
                                         <color key="backgroundColor" name="controlAccentColor" catalog="System" colorSpace="catalog"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <state key="normal" title="-">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
@@ -489,30 +493,21 @@
                                             <action selector="minusTapped:" destination="Vvr-ZB-UfB" eventType="touchUpInside" id="Bac-9Q-gUc"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sMW-LM-m9e">
-                                        <rect key="frame" x="164" y="556" width="46" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" title="Button"/>
-                                        <connections>
-                                            <action selector="createDirection:" destination="Vvr-ZB-UfB" eventType="touchUpInside" id="dkA-YL-EdS"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="amf-Q8-zYX" secondAttribute="trailing" constant="38" id="057-bf-bWf"/>
-                                    <constraint firstAttribute="trailing" secondItem="3WX-oZ-Dyw" secondAttribute="trailing" constant="38" id="3xg-8O-Op1"/>
-                                    <constraint firstItem="3WX-oZ-Dyw" firstAttribute="leading" secondItem="DeC-oB-nFn" secondAttribute="leading" constant="304" id="NP5-uT-tY2"/>
-                                    <constraint firstItem="3WX-oZ-Dyw" firstAttribute="top" secondItem="DeC-oB-nFn" secondAttribute="top" constant="44" id="Pm9-Q1-pqk"/>
-                                    <constraint firstItem="amf-Q8-zYX" firstAttribute="top" secondItem="3WX-oZ-Dyw" secondAttribute="bottom" constant="4" id="gFH-qN-q5a"/>
-                                    <constraint firstItem="amf-Q8-zYX" firstAttribute="leading" secondItem="DeC-oB-nFn" secondAttribute="leading" constant="304" id="uQe-V4-RJw"/>
+                                    <constraint firstItem="3WX-oZ-Dyw" firstAttribute="width" secondItem="amf-Q8-zYX" secondAttribute="width" id="00k-9l-OI4"/>
+                                    <constraint firstItem="amf-Q8-zYX" firstAttribute="top" secondItem="3WX-oZ-Dyw" secondAttribute="bottom" constant="12" id="hJ3-dV-sBb"/>
+                                    <constraint firstItem="3WX-oZ-Dyw" firstAttribute="height" secondItem="amf-Q8-zYX" secondAttribute="height" id="lcJ-h8-A5L"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="4XN-cG-iDe" firstAttribute="trailing" secondItem="amf-Q8-zYX" secondAttribute="trailing" constant="16" id="1Hz-ct-4jH"/>
                             <constraint firstItem="DeC-oB-nFn" firstAttribute="leading" secondItem="4XN-cG-iDe" secondAttribute="leading" id="1pN-k9-giw"/>
+                            <constraint firstItem="4XN-cG-iDe" firstAttribute="trailing" secondItem="3WX-oZ-Dyw" secondAttribute="trailing" constant="16" id="I1t-UF-h1q"/>
+                            <constraint firstItem="3WX-oZ-Dyw" firstAttribute="top" secondItem="4XN-cG-iDe" secondAttribute="top" constant="16" id="K6n-Yc-Xdp"/>
                             <constraint firstItem="DeC-oB-nFn" firstAttribute="top" secondItem="4XN-cG-iDe" secondAttribute="top" id="NIs-na-TW0"/>
                             <constraint firstItem="DeC-oB-nFn" firstAttribute="trailing" secondItem="4XN-cG-iDe" secondAttribute="trailing" id="YyL-Hc-fcz"/>
                             <constraint firstItem="4XN-cG-iDe" firstAttribute="bottom" secondItem="DeC-oB-nFn" secondAttribute="bottom" id="sQo-vR-x8T"/>
@@ -520,7 +515,6 @@
                         <viewLayoutGuide key="safeArea" id="4XN-cG-iDe"/>
                     </view>
                     <connections>
-                        <outlet property="directionButton" destination="sMW-LM-m9e" id="DgL-xe-gI1"/>
                         <outlet property="mapView" destination="DeC-oB-nFn" id="azJ-WV-AKD"/>
                         <outlet property="minusZoomButton" destination="amf-Q8-zYX" id="Vqj-dW-WuR"/>
                         <outlet property="plusZoomButton" destination="3WX-oZ-Dyw" id="IUi-MD-WJK"/>
